@@ -1,22 +1,31 @@
 package mavmi.telegram_bot.water_stuff.telegramBot.userThread;
 
 import com.pengrad.telegrambot.model.Update;
-import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import mavmi.telegram_bot.lib.telegram_bot_starter.userThread.UserThreads;
 import mavmi.telegram_bot.lib.user_cache_starter.provider.UserCachesProvider;
 import mavmi.telegram_bot.water_stuff.mapper.RequestsMapper;
 import mavmi.telegram_bot.water_stuff.service.waterStuff.WaterService;
-import mavmi.telegram_bot.water_stuff.telegramBot.client.WaterTelegramBotSender;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
+@Slf4j
 @Component
-@RequiredArgsConstructor
 public class WaterStuffUserThreads extends UserThreads<WaterStuffUserThread> {
 
     private final UserCachesProvider userCachesProvider;
     private final RequestsMapper requestsMapper;
     private final WaterService waterStuffService;
-    private final WaterTelegramBotSender sender;
+
+    public WaterStuffUserThreads(@Value("${user-threads.max-count}") long maxThreadsCount,
+                                 UserCachesProvider userCachesProvider,
+                                 RequestsMapper requestsMapper,
+                                 WaterService waterStuffService) {
+        super(maxThreadsCount);
+        this.userCachesProvider = userCachesProvider;
+        this.requestsMapper = requestsMapper;
+        this.waterStuffService = waterStuffService;
+    }
 
     @Override
     public void add(Update update) {
@@ -30,10 +39,19 @@ public class WaterStuffUserThreads extends UserThreads<WaterStuffUserThread> {
         WaterStuffUserThread userThread = (WaterStuffUserThread) tgIdToUserThread.get(chatId);
 
         if (userThread == null) {
-            userThread = new WaterStuffUserThread(this, userCachesProvider, requestsMapper, waterStuffService, sender, chatId);
-            tgIdToUserThread.put(chatId, userThread);
+            userThread = new WaterStuffUserThread(this, userCachesProvider, requestsMapper, waterStuffService, chatId);
             userThread.add(update);
-            new Thread(userThread).start();
+
+            synchronized (this) {
+                if (tgIdToUserThread.size() < maxThreadsCount) {
+                    tgIdToUserThread.put(chatId, userThread);
+                    Thread.ofVirtual().start(userThread);
+                    log.info("New thread. Current pool size is {}", tgIdToUserThread.size());
+                } else {
+                    userThreadsQueue.add(userThread);
+                    log.info("New thread in queue. Queue size is {}", userThreadsQueue.size());
+                }
+            }
         } else {
             userThread.add(update);
         }
